# AXIOME

./: .gitignore  .tarball-version  AUTHORS  Makefile  Makefile.am  README  README.developers  aq-base  aq-base.1  aq-betadisper.in  aq-biplot  aq-biplot.1  aq-bubbleplot  aq-bubbleplot.1  aq-cmplibs  aq-cmplibs.1  aq-count-n.1  aq-demux-illumina.1  aq-duleg  aq-duleg.1  aq-duleg.in  aq-dulegplot  aq-dulegplot.1  aq-estimateq.1  aq-fasta-length  aq-fasta-length.1  aq-fastq2oldillumina.1  aq-filter-fastq-known.1  aq-inst-cran.1  aq-inst-cran.in  aq-joinn.1  aq-libcontrib  aq-libcontrib.1  aq-marry-illumina-index.1  aq-marry-otu-names.1  aq-mkrepset.1  aq-module.vala  aq-mothur-alpha  aq-mothur-alpha.1  aq-mothur-base  (+92 more)
bin-common/: biplot  bubbleplot  fastalengths  oldillumina2fastq  otu2bar  otu2lnotu  otu2pcord  otubinner  otuhistogram  otunolineage  otuplothistogram  otusumtop  otutop  otuwithseqs  pretendsummarize  qiime_beta  qiime_cmplibs  qiime_libcontrib  qiime_otu2seqs  qiime_rbiplot  qiime_setup  qualityanal  rareotuwithlineage  sortfastalen
debian/: autoqiime-dev.install  autoqiime.install  axiome-dev.install  axiome.install  changelog  control  copyright  docs  rules
plugins/: a-alpha.vala  a-beta.vala  a-betadisper.vala  a-blast-classifier.vala  a-blast.vala  a-duleg.vala  a-excludetaxa.vala  a-filterotus.vala  a-heatmap.vala  a-jackknife.vala  a-libcmp.vala  a-mrpp.vala  a-multicore.vala  a-nmf.vala  a-pca.vala  a-pcoa.vala  a-qualanal.vala  a-rankabundance.vala  a-rdp.vala  a-rtax.vala  a-taxaplot.vala  a-uchime.vala  a-unifrac_mrpp.vala  a-venn.vala  a-withseqs.vala  sample.vala  src-fasta.vala  src-panda.vala
qiime/: Makefile  autoqiime.deps  autoqiime.vala  biplot  bubbleplot  joinn.vala  mkrepset.deps  mkrepset.vala  qiime_beta  qiime_cmplibs  qiime_libcontrib  qiime_otu2seqs  qiime_rbiplot  qiime_setup  realpath.vapi  sample.aq
qiime/otu_table/: otu2bar  otu2pcord  otunolineage  otusumtop  otuwithseqs  pretendsummarize  rareotuwithlineage
seq/: binandchuck.c  cntnnt.c  estimateq.c  fastq2oldillumina.c  oldillumina2fastq  parser.c  qualhisto.c  qualityanal  syntheticfastq.c
